# pwr_mlodziaki_integracja

./: .gitignore  README.md  devenv.nix  package-lock.json  package.json
bpmn/: create_user.bpmn  premium_account.bpmn  video_added.bpmn
services/: docker-compose.yml  k8s_build.ps1  k8s_build.sh  k8s_start.ps1  k8s_start.sh
services/_kubernetes/: ingress.yaml  minikube_start.ps1  minikube_start.sh  restart_all.ps1  restart_all.sh  start_all.ps1  start_all.sh  stop_all.ps1  stop_all.sh
services/_kubernetes/chat/: chat-service.yaml  chat.yaml
services/_kubernetes/chat-db/: chat-db-service.yaml  chat-db-volume-claim.yaml  chat-db-volume.yaml  chat-db.yaml
services/_kubernetes/frontend/: frontend-service.yaml  frontend.yaml
services/_kubernetes/kafka/: kafka-service.yaml  kafka.yaml
services/_kubernetes/kong/: chat_route.yaml  frontend_route.yaml  gateway.yaml  rooms_route.yaml  users_route.yaml  videos_route.yaml
services/_kubernetes/rooms-db/: rooms-db-service.yaml  rooms-db-volume-claim.yaml  rooms-db-volume.yaml  rooms-db.yaml
services/chat/: Dockerfile  domain.py  kafka_handler.py  main.py  pyproject.toml  repository.py
services/frontend/: generate_client.ps1  generate_client.sh  next.config.mjs  package-lock.json  package.json  tsconfig.json
services/rooms/: Dockerfile  domain.py  kafka_handler.py  main.py  postgress_handler.py  pyproject.toml  repository.py
services/users/: Dockerfile  domain.py  main.py  postgress_handler.py  pyproject.toml  repository.py
services/videos/: domain.py  kafka_handler.py  main.py  pyproject.toml  repository.py
(+30 files in other folders)
